# EDU

./: .dockerignore  .env.bak.localtunnel  .env.example  .env.production.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  Taskfile.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  pyrightconfig.json  vite.config.ts  vitest.config.ts  web.nginx.conf
.github/: dependabot.yml
backend/: .flake8  alembic.ini  log_config.json  pyproject.toml  run_migrate.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_lesson_topic_homework.py  003_class_max_lessons.py  003_class_subject_teacher.py  005_classes_year_grade_letter_archived.py  006_grades_journal_index.py  007_profiles_relations_expand.py  008_profiles_relations_backfill.py  009_contract_drop_legacy_relations.py  010_relations_integrity_hardening.py  011_user_profile_fields.py  012_user_avatar_path.py
backend/app/: __init__.py  deps.py  main.py
backend/app/core/: config.py  timeutil.py
backend/app/db/: session.py
backend/app/models/: __init__.py  class_model.py  class_subject.py  grade.py  homework.py  lesson.py  parent.py  role_profiles.py  schedule.py  school_settings.py  student.py  subject.py  teacher.py  user.py
backend/app/repositories/: admin_class_repository.py
backend/app/routers/: admin.py  auth.py  classes.py  health.py  me.py  media.py  students.py  teacher.py
backend/app/schemas/: admin.py  auth.py  classes.py  me.py  profile.py  teacher.py  user.py
backend/app/services/: auth.py  avatar_storage.py  email_queue.py  journal_dates.py  media_signing.py  profile.py  rate_limit.py  relation_access.py  schedule.py
backend/docs/decisions/: 001_schedule_teacher_name.md
backend/notifier/: __init__.py  consume.py
backend/scripts/: backfill_relations_report.py  ensure_test_db.py  restore_media.py  seed.sql  seed_dev.sql
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_avatar_storage.py  test_classes.py  test_core_config.py  test_db_relations_architecture.py  test_deps.py  test_health.py  test_me.py  test_media.py  test_profile.py  test_profile_service.py  test_relation_access.py  test_restore_media.py  test_schedule_recipients.py  test_schemas_user.py  test_services_auth.py  test_services_email_queue.py  test_services_journal_dates.py  test_services_rate_limit.py  test_services_schedule.py  test_settings_observability.py  test_students.py  test_teacher.py  test_timeutil.py
docs/: README.md  deploy.md  testing-frontend.md  user-guide.md
public/: theme-init.js
scripts/: _lib.sh  auto_update.sh  backup.sh  check-env.sh  (+7 more)
(+141 files in other folders)
