[tool.poetry]
name = "abh-edu-api"
version = "0.1.0"
description = "ABH Edu FastAPI backend"
authors = []
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.14.2"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.0"
bcrypt = "^4.2.0"
redis = ">=5.2,<9.0"
pika = "^1.3.0"
python-multipart = "^0.0.31"
cryptography = ">=46.0.7,<50.0.0"
pyjwt = "^2.13.0"
starlette = "^1.3.1"
prometheus-fastapi-instrumentator = "^8.0.0"
idna = "^3.15"
mako = "^1.3.12"
python-dotenv = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
pytest-cov = "^6.0.0"
pytest-timeout = "^2.3.0"
httpx = "^0.28.0"
flake8 = "^7.1.0"
bandit = "^1.7.0"
pygments = "^2.20.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --timeout=60"

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py", "*/tests/*"]

[tool.coverage.report]
fail_under = 80
exclude_lines = ["pragma: no cover", "def __repr__", "raise NotImplementedError"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
